--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for NanotrasenArmory
 
+1.0.6.0 - Fixed the illegal characters in the faction-labels
+
+
 1.0.5.0 - Added confiurable at game-start option
 
 
